--- a/src/css/core.css
+++ b/src/css/core.css
@@ -1851,6 +1851,8 @@ td {
   .filter-item p {
     display: inline-block;
     vertical-align: middle; }
+  .filter-item svg {
+    padding-right: 8px; }
   .filter-item:hover, .filter-item:focus {
     fill: #fff;
     color: #fff; }
@@ -1892,6 +1894,19 @@ td {
   .progress__bar {
     height: 100%;
     background-color: #f54997; }
+
+.duration-label,
+.duration-label__icon,
+.duration-label__time {
+  display: inline-block;
+  vertical-align: middle;
+  fill: #bbb;
+  color: #bbb; }
+
+.duration-label svg {
+  padding-right: 8px;
+  vertical-align: middle;
+  display: inline-block; }
 
 nav {
   height: 60px;
